fix alignment instruction

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     height: 70vh;
     max-height: 1000px;
     position: relative;
-    margin: -100px auto 0 auto;
+    margin: 0 auto 2rem auto;
     background-image: url("src/images/caralis.png");
     background-size: cover;
     background-position: center;
@@ -66,7 +66,7 @@
     text-align: center;
     font-size: 0.5rem;
     color: rgb(91, 55, 4);
-    margin-bottom: 2rem;
+    margin-top: 1rem;
     max-width: 600px;
     margin-left: auto;
     margin-right: auto;
